# DeepLab

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  compose.yaml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: desktop-prerelease.yml  tauri-release.yml
deeplab/: llm_provider.py  main.py  model.py  runtime_settings.py
deeplab/api/: __init__.py  presenters.py  schemas.py
deeplab/daily_papers/: mistral_ocr.py  paper_collection.py  paper_filtering.py  paper_reading.py
deeplab/db/: __init__.py  config.py  engine.py  maintenance.py  migrate.py  query.py  schema_setup.py
deeplab/db/migrations/: 0001_initial_schema.sql  0002_legacy_compat.sql
deeplab/db/repositories/: __init__.py  base.py
deeplab/knowledge_base/: __init__.py  embedding.py  extraction.py  note_service.py  note_sync.py  service.py  similarity.py  xml_parser.py
deeplab/workflows/: common.py  daily_reports.py  daily_work_reports.py  manual_reading.py
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: clean.mjs  prepare-backend-runtime.mjs  prepare-frontend.mjs  run-electron-builder.mjs
doc/: bidirection_note.md  data.md  paper_reading.md  paper_recommendation.md  task.md  work_reports.md
doc/development/: README.md  architecture.md  backend-api.md  frontend-pages.md  llm-provider-notes.md  qa-checklist.md  ui-theme.md
docs/feature/: daily_paper_reports.md  frontend_development_guide.md  knowledge_base.md
docs/module/: paper_collection.md  paper_filtering.md  paper_reading.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
frontend/app/(dashboard)/: page.tsx
frontend/components/: app-shell.tsx
frontend/components/dashboard/: report-groups.tsx
frontend/lib/: dashboard.ts  labels.ts  query.ts  time.ts
frontend/lib/api/: client.ts  (+1 more)
scripts/: cleanup_pathological_workflows.py  clear_database.py  migrate_postgres_to_duckdb.py  repack_database.py  vacuum_database.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resource/: init_db.sql
src-tauri/resource/migrations/: 0002_wal_hardening.sql  0003_note_revisions.sql  002_add_rules.sql  003_add_paper_recommendations.sql  004_add_paper_reading_fields.sql  005_add_note_links.sql
src-tauri/resource/prompts/: default_paper_filter_prompt.md  default_paper_reading_prompt.md
src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  notes.rs  paper_reading.rs  paper_recommendation.rs  rules.rs  settings.rs  state.rs  tasks.rs  types.rs  work_report.rs
src/app/: layout.tsx  page.test.tsx  page.tsx
src/components/: AppNav.tsx  ConfirmDialog.tsx  EmptyStateToday.tsx  LayoutChrome.tsx  RecommendationSummaryCard.tsx  RecommendedPaperCard.tsx  TriggerWorkflowButton.tsx  UpdaterBootstrap.tsx  WorkflowStatusPanel.tsx
src/lib/: note.ts  paperReport.ts  rules.ts  settings.ts  tasks.ts  updater.ts  workReport.ts  workflow.ts
src/styles/: globals.css
(+67 files in other folders)
